# bardcore

./: .gitignore  README.md  pyproject.toml
bardcore/: _logging.py  cli.py  config.py  errors.py  player.py  tracks.py  util.py
example/: example_config.yml
